NextGenAppPackage/main/default/objects/Plato__c/Plato__c.object-meta.xml
<CustomObject>
    <label>Plato</label>
    <nameField>
        <label>Plato Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>