NextGenAppPackage/main/default/objects/Plato__c/fields/Batch_Cooking__c.field-meta.xml
<CustomField>
    <fullName>Batch_Cooking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Cooking</label>
    <type>Checkbox</type>
</CustomField>