NextGenAppPackage/main/default/objects/Plato__c/fields/Calorico__c.field-meta.xml
<CustomField>
    <fullName>Calorico__c</fullName>
    <label>Calorico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>calorico</valueSetName>
    </valueSet>
</CustomField>