NextGenAppPackage/main/default/objects/Plato__c/fields/Detalles__c.field-meta.xml
<CustomField>
    <fullName>Detalles__c</fullName>
    <label>Detalles</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>