NextGenAppPackage/main/default/objects/Plato__c/fields/Direccion_internet__c.field-meta.xml
<CustomField>
    <fullName>Direccion_internet__c</fullName>
    <label>Direccion internet</label>
    <type>Url</type>
</CustomField>