NextGenAppPackage/main/default/objects/Plato__c/fields/Estacion_recomendada__c.field-meta.xml
<CustomField>
    <fullName>Estacion_recomendada__c</fullName>
    <label>Estación recomendada</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estacion</valueSetName>
    </valueSet>
</CustomField>