NextGenAppPackage/main/default/objects/Plato__c/fields/Modo_de_preparaci_n__c.field-meta.xml
<CustomField>
    <fullName>Modo_de_preparaci_n__c</fullName>
    <label>Modo de preparación</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>