NextGenAppPackage/main/default/objects/Plato__c/fields/N_mero_de_raciones__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_raciones__c</fullName>
    <label>Número de raciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>