NextGenAppPackage/main/default/objects/Plato__c/fields/Nutriente_principal__c.field-meta.xml
<CustomField>
    <fullName>Nutriente_principal__c</fullName>
    <label>Nutriente principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidratos de Carbono</fullName>
            </value>
            <value>
                <fullName>Proteinas</fullName>
            </value>
            <value>
                <fullName>Grasas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>