NextGenAppPackage/main/default/objects/Plato__c/fields/Prioridad__c.field-meta.xml
<CustomField>
    <fullName>Prioridad__c</fullName>
    <description>1 no me gusta nada
5 me encanta</description>
    <inlineHelpText>1 no me gusta nada
5 me encanta</inlineHelpText>
    <label>Prioridad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>