NextGenAppPackage/main/default/objects/Plato__c/fields/Saludable__c.field-meta.xml
<CustomField>
    <fullName>Saludable__c</fullName>
    <inlineHelpText>5 muy saludable
1 nada saludable</inlineHelpText>
    <label>Saludable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>