NextGenAppPackage/main/default/objects/Plato__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desayuno</fullName>
            </value>
            <value>
                <fullName>Almuerzo</fullName>
            </value>
            <value>
                <fullName>Merienda</fullName>
            </value>
            <value>
                <fullName>Cena</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>