NextGenAppPackage/main/default/objects/Plato__c/fields/Utilizado_Por_Ultima_Vez__c.field-meta.xml
<CustomField>
    <fullName>Utilizado_Por_Ultima_Vez__c</fullName>
    <label>Utilizado Por Ultima Vez</label>
    <type>Date</type>
</CustomField>